experience section: fix slidein overflow

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -374,8 +374,9 @@ Experience Section Styles
 
 #section-experience {
   background-color: #7ACCC8;
-  display: inline-block;
   width: 100%;
+  display: block;
+  overflow: hidden;
 }
 
 .text-experience {
